zerowaste-api/src/main/java/com/example/zerowaste_api/common/error/FoodItemErrorConstant.java
package com.example.zerowaste_api.common.error;

public class FoodItemErrorConstant {
    public static final String FOOD_ITEM_NOT_FOUND = "foodItem.notFound";
}
